--- a/Agamotto.xcodeproj/xcshareddata/xcschemes/AgamottoDemo-watchOS.xcscheme
+++ b/Agamotto.xcodeproj/xcshareddata/xcschemes/AgamottoDemo-watchOS.xcscheme
@@ -63,8 +63,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/AgamottoDemo-iOS">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "07A5486C1E7C4D6E00A6C4A1"
@@ -72,7 +74,7 @@
             BlueprintName = "AgamottoDemo-watchOS"
             ReferencedContainer = "container:Agamotto.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -80,8 +82,10 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/AgamottoDemo-iOS">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "07A5486C1E7C4D6E00A6C4A1"
@@ -89,7 +93,16 @@
             BlueprintName = "AgamottoDemo-watchOS"
             ReferencedContainer = "container:Agamotto.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "07A5486C1E7C4D6E00A6C4A1"
+            BuildableName = "AgamottoDemo-watchOS.app"
+            BlueprintName = "AgamottoDemo-watchOS"
+            ReferencedContainer = "container:Agamotto.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
